# marugoto

./: pyproject.toml  requirements.txt
marugoto/: __init__.py  data.py
marugoto/cli_utils/: find_broken_h5.py  get_all_categories.py
marugoto/extract/: extract.py  imagenet.py  ozanciga.py
marugoto/extract/xiyue_wang/: __main__.py  _xiyue_wang.py
marugoto/extract/xiyue_wang/RetCLL/: ResNet.py
marugoto/features/: __init__.py  __main__.py  _features.py  helpers.py
marugoto/gui/: marugoto_gui.py
marugoto/mil/: __init__.py  __main__.py  _mil.py  helpers.py  model.py  train.py
marugoto/stats/: categorical.py
marugoto/visualizations/: gradcam.py  mil_heatmaps.py  mil_top_tiles.py  prc.py  roc.py
