[project]
name = "marugoto"
version = "0.8.0"
authors = [{ name = "Marko van Treeck", email = "markovantreeck@gmail.com" }]
description = "A pipeline for analyzing histopathological images"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastai>=2.7.18",
    "fire>=0.7.0",
    "h5py>=3.12.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "openslide-python>=1.4.1",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
]

[project.urls]
"Homepage" = "https://github.com/KatherLab/marugoto"
"Bug Tracker" = "https://github.com/KatherLab/marugoto/issues"
